# guerrillamail-client-rs

./: CHANGELOG.md  Cargo.toml  README.md  readme.md
docs/work/done/: 01-default-tls-verification.md  02-bootstrap-status-user-agent.md  05-fetch-attachment-mail-id-validation.md  06-ci-format-clippy.md  08-dead-stale-docs.md
docs/work/todo/: 03-readme-quick-start-move.md  04-demo-unicode-excerpt.md  07-trim-dependencies.md
examples/: demo.rs  get_mail.rs  verify.rs
src/: client.rs  error.rs  lib.rs  models.rs
