[package]
name = "guerrillamail-client"
version = "0.6.0"
edition = "2024"
description = "Async Rust client for GuerrillaMail temporary email service"
license = "MIT"
repository = "https://github.com/11philip22/guerrillamail-client-rs"
documentation = ""

keywords = [
    "email",
    "temporary-email",
    "disposable-email",
    "guerrillamail",
    "testing"
]

categories = [
    "api-bindings",
    "web-programming"
]

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "socks"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rand = "0.9"

[features]
debug_responses = []

[dev-dependencies]
httpmock = "0.7"

[[example]]
name = "demo"
path = "examples/demo.rs"
