[package]
name = "guerrillamail-client"
version = "0.7.2"
edition = "2024"
description = "An async Rust API client for the GuerrillaMail temporary email service, built for testing and automation."
license = "MIT"
repository = "https://github.com/11philip22/guerrillamail-client-rs"
documentation = "https://docs.rs/guerrillamail-client/latest/guerrillamail_client/"
homepage = "https://www.guerrillamail.com/"

keywords = [
    "email",
    "temp-mail",
    "email-testing",
    "api-client",
    "guerrillamail",
]

categories = [
    "api-bindings",
    "web-programming"
]

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "socks"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rand = "0.9"

[dev-dependencies]
httpmock = "0.7"

[[example]]
name = "demo"
path = "examples/demo.rs"
